# rental-marketplace-analytics

./: .gitignore  README.md  main.py  project_structure.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: etl-pipeline.yml
Notebook/: check_data.ipynb  load_csv_to_rds.ipynb
aws/: generate_metrics_job.py  mysql_to_s3_job.py  processed_to_redshift_job.py  s3_to_redshift_job.py  step_function_definition.json  transform_data_job.py
docs/: architecture.md  main_usage.md  rds_setup.md  redshift_sql_syntax.md  redshift_troubleshooting.md  setup_and_troubleshooting.md
notebooks/: rental_performance_metrics.ipynb  user_engagement_metrics.ipynb
scripts/: create_redshift_cluster.py  create_step_function.py  deploy_aws.py  deploy_glue_jobs.py  load_csv_to_rds.py  run_etl_pipeline.py  setup_iam_roles.py  setup_rds.py  setup_redshift.py  setup_redshift_connection.py  update_security_group.py
sql/redshift/: 00_create_schemas.sql  01_create_raw_layer.sql  02_create_curated_layer.sql  03_create_presentation_layer.sql  03_create_presentation_layer_metrics.sql  04_populate_curated_layer.sql  05_populate_presentation_layer_final.sql  06_create_stored_procedures.sql
src/config/: __init__.py  settings.py
src/database/: models.py
src/utils/: __init__.py  json_utils.py
tests/: test_error_handling.py  test_log_management.py  test_main.py  test_pipeline.py
